# zeal

./: .gitmodules
src/app/resources/browser/: welcome.html
src/libs/: CMakeLists.txt
src/libs/browser/: CMakeLists.txt  historyitem.h  searchtoolbar.cpp  searchtoolbar.h  webcontrol.cpp  webcontrol.h  webview.cpp  webview.h
src/libs/core/: CMakeLists.txt  settings.cpp
src/libs/ui/: CMakeLists.txt  browsertab.cpp  browsertab.h  mainwindow.cpp  mainwindow.h  settingsdialog.cpp
